fix font so that 11 characters are visible on mobile

--- a/style.css
+++ b/style.css
@@ -213,4 +213,10 @@ span:hover {
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
   }
+
+  p {
+    padding-right: 0.3rem;
+    font-size: 2.8rem;
+    padding-top: 1.2rem;
+  }
 }
